Fixed lable spacing of Parr Summary Files modified - [EntityProfileCancelledBans,Lookup]

--- a/src/main/webapp/pages/EntityProfileCancelledBans/EntityProfileCancelledBans.css
+++ b/src/main/webapp/pages/EntityProfileCancelledBans/EntityProfileCancelledBans.css
@@ -19,3 +19,6 @@
 .getEntityDetailsTable1{
     padding-right: 1.7em;
 }
+.parrSumLabel {
+    text-align: right;
+}
